# methane-emissions-management

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  build-debug.ps1  build-debug.sh  build-production.sh  diesel.toml  docker-compose.yml  generate-schema-json.ps1  generate-schema-json.sh
client/: .gitignore  Cargo.toml  Trunk.toml  codegen.yml  index.html  package-lock.json  package.json
client/graphql/: mutations.gql  mutations.graphql  queries.gql  queries.graphql  schema.graphql  schema.json
client/src/: apollo-client.ts  app.rs  lib.rs  main.rs  types.d.ts
client/src/components/: controllers.rs  facility.rs  login.rs  logout.rs  mod.rs  nav.rs  sidebar.rs  user.rs  user_ctx.rs
client/src/components/contexts/: user_context.rs
client/src/components/emitters_window/: compressors.rs  controller_change_row.rs  controller_changes.rs  controller_data.rs  controller_row.rs  controllers.rs  delete_entry.rs  emitter_navbar.rs  emitter_primary_navbar.rs  emitter_secondary_navbar.rs  emitters_window.rs  entry.rs  expand_data.rs  expand_svg.rs  id_selection.rs  mod.rs  navbar.rs  secondary_navbar.rs  tank_farms.rs
client/src/components/modal/: error.rs  mod.rs  modal.rs  modal_variant.rs
client/src/components/navigation/: dropdown.rs  logout.rs  mod.rs  navigation_bar.rs
client/src/components/sidebar/: facility.rs  mod.rs  sidebar.rs
client/src/hooks/: mod.rs  use_query.rs
client/src/lib/components/: Controller.svelte  Dropdown.svelte  Sidebar.svelte
client/src/models/: mod.rs
client/src/models/mutations/: controller.rs  manual_mutation.rs  mod.rs  pneumatic_instrument.rs  update_field.rs  user.rs
client/src/models/queries/: compressor.rs  controller.rs  controller_change.rs  dropdown_selection.rs  facility.rs  get_object.rs  id_selection.rs  mod.rs  month_methane_emission.rs  pneumatic_instrument.rs  tank_farm.rs  user.rs
client/src/pages/: controllers.rs  home.rs  mod.rs  register.rs
client/src/routes/: +layout.svelte  +page.svelte  stores.ts
client/src/routes/about/: +page.svelte
client/src/routes/controllers/: +page.svelte
client/src/routes/login/: +page.svelte
client/src/routes/register/: +page.svelte
client/src/utils/: common.rs  error.rs  gen_style.rs  get_data_component.rs  insert_form.rs  mod.rs  row_component.rs
client/styles/: dropdown.css  emitter-data.css  emitter-row.css  emitters-window.css  entry.css  index.css  insert-form.css  modal.css  navigation-bar.css  popover.css  register.css  sidebar.css
common/: Cargo.toml
common/src/: compressor.rs  lib.rs  manual_mutation.rs  month_methane_emission.rs  navbar_item.rs  non_level_controller.rs  pneumatic_device_type.rs  pneumatic_instrument.rs  site.rs  storage_tank.rs  tank.rs  user.rs
frontend/: Cargo.toml  cfg.toml  index.html
frontend/assets/css/: style.scss
frontend/graphql/: controllers_by_creator.graphql  schema.graphql
frontend/src/: app.rs  main.rs
frontend/src/components/: nav.rs
frontend/src/pages/: controllers.rs  home.rs  mod.rs  users.rs
frontend/src/util/: constant.rs
leptos-client/: Cargo.toml  index.html
leptos-client/graphql/: queries.graphql
leptos-client/src/: api.rs  build_request.rs  lib.rs  list.rs  list_facilities.rs  main.rs
leptos-client/src/components/: delete_entry.rs  error_template.rs  mod.rs
leptos-client/src/models/: mod.rs
leptos-client/src/models/mutations/: manual_mutation.rs  mod.rs
leptos-client/src/models/queries/: facility.rs  mod.rs  pneumatic_instrument.rs  user.rs
leptos-client/src/routes/: about.rs  mod.rs  navigation_bar.rs  register.rs
leptos-client/src/routes/methane_emission_sources/: facility_list.rs  facility_routes.rs  mod.rs  sources_navigation_bar.rs
leptos-client/src/routes/pneumatic_instruments/: mod.rs  pneumatic_instrument_list.rs  pneumatic_intrument_row.rs
leptos-client/src/utils/: build_request.rs  console_log.rs  error.rs  load_data.rs  mod.rs
leptos-client/styles/: emitter-data.css  emitters-window.css  insert-form.css  modal.css  router-style.css  sidebar.css
server/: Cargo.toml  sqlx-data.json
server/migrations/: 20220822012904_schema.up.sql  schema.prisma
server/src/: configuration.rs  lib.rs  main.rs  routes.rs  ssr_render.rs  ssr_router.rs  startup.rs
server/src/authentication/: cookie.rs  manager.rs  mod.rs  passwords.rs  utils.rs
server/src/graphql/: context.rs  mod.rs
server/src/graphql/dataloaders/: compressor_loader.rs  controller_application_loader.rs  controller_change_loader.rs  controller_loader.rs  controller_loader_macro.rs  controller_manufacturer_loader.rs  controller_month_hours_loader.rs  controller_month_vent_loader.rs  controller_month_vent_override_loader.rs  facility_loader.rs  gas_analysis_calculated_param_loader.rs  gas_analysis_loader.rs  loader_registry.rs  mod.rs  tank_farm_month_vent_override_loader.rs  tank_farm_vent_factor_loader.rs  user_loader.rs
server/src/graphql/interfaces/: mod.rs
server/src/graphql/models/: compressor.rs  compressor_blowdown.rs  compressor_month_hours.rs  compressor_month_vent.rs  compressor_month_vent_override.rs  controller.rs  controller_application.rs  controller_change.rs  controller_manufacturer.rs  controller_month_hours.rs  controller_month_vent.rs  controller_month_vent_override.rs  dropdown_selection.rs  facility.rs  get_object.rs  inputs.rs  mod.rs  tank_farm_change.rs  tank_farm_month_oil_flow.rs  tank_farm_month_vent.rs  tank_farm_month_vent_override.rs  tank_farm_vent_factor_calculated.rs  user.rs
server/src/graphql/mutations/: compressor_blowdown.rs  compressor_month_vent.rs  controller.rs  controller_month_vent.rs  gas_analysis_calculated_param.rs  manual_mutation.rs  mod.rs  month_methane_emission.rs  tank_farm_month_vent.rs  user.rs
server/src/graphql/queries/: compressor.rs  compressor_blowdown.rs  compressor_month_vent.rs  controller.rs  controller_application.rs  controller_change.rs  facility.rs  (+10 more)
users/: .env.example  Cargo.toml
users/migrations/2022-05-26-025641_users/: down.sql
users/src/: server.rs
users/src/graphql_module/: context.rs  mod.rs  schema.rs
(+559 files in other folders)
