[package]
authors = ["Doma Sucic <domagoj.sucic1@gmail.com"]
edition = "2021"
name = "emissions-app"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lib"
path = "src/lib.rs"

[dependencies]
# misc
chrono = {version = "0.4.19", features = ["serde"]}
dotenv = "0.15.0"
futures = "0.3.12"

# web server
actix-cors = "0.6.1"
actix-rt = "2.7.0"
actix-web = "4.0.1"
env_logger = "0.9.0"
log = "0.4.17"
async-trait = "0.1.53"
dataloader = "0.15.0"

# database
diesel = {version = "1.4.8", features = ["postgres", "uuidv07", "r2d2", "chrono"]}
diesel_migrations = "1.4.0"

# graphql
juniper = "0.15.9" 
juniper_actix = "0.4.0" 
serde = "1.0.137" 
serde_derive = "1.0.137" 
serde_json = "1.0.81" 
uuid = "0.8.2" # We need to use version 0.8.* because that's the version juniper uses

[dev-dependencies]
actix-http = "3.0.4"
serial_test = "*"
