[package]
name = "emissions_app_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [[bin]]
# name = "emissions_app"

[[bin]]
name = "ssr_router_hydrate"
required-features = ["hydration"]

[[bin]]
name = "ssr_router_server"
required-features = ["ssr"]


[dependencies]
yew = { version = "0.20", features = ["csr"] }
gloo-net = "0.2"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen-futures = "0.4"
graphql_client = "0.12.0"
serde_json = "1"
web-sys = "0.3"
yew-hooks = "0.2"
yew-router = "0.17.0"
common = { path = "../common", features = ["client"] }
uuid = { version = "1", features = ["serde"] }
chrono = { version = "0.4", features = ["wasmbind", "serde"] }
log = "0.4"
futures = { version = "0.3", features = ["std"], default-features = false }


[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.26.0", features = ["full"] }
axum = "0.5"
tower = { version = "0.4", features = ["make"] }
tower-http = { version = "0.3", features = ["fs"] }
env_logger = "0.9"
clap = { version = "3.1.7", features = ["derive"] }
hyper = { version = "0.14", features = ["server", "http1"] }
# jemallocator = "0.5"

[features]
ssr = ["yew/ssr"]
hydration = ["yew/hydration"]
