[package]
name = "emissions_app_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
yew-router = "0.17.0"
yew-hooks = "0.2"
gloo = "0.8"
gloo-net = "0.2"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen-futures = "0.4"
graphql_client = "0.12.0"
serde_json = "1"
web-sys = { vesrion = "0.3", features = ["Document"] }
uuid = { version = "1", features = ["serde"] }
chrono = { version = "^0.4", features = ["wasmbind", "serde"] }
log = "0.4"
futures = { version = "0.3", features = ["std"], default-features = false }
gloo-timers = "0.2.6"
wasm-bindgen = "0.2"
common = { path = "../common" }


[target.'cfg(target_arch = "wasm32")'.dependencies]
yew = { version = "0.20", features = ["hydration"] }
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
yew = { version = "0.20", features = ["ssr"] }
tokio = { version = "1.26.0", features = ["full"] }

[features]
ssr = ["yew/ssr"]
hydration = ["yew/hydration"]
