[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["default"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
sqlx = { version = "0.6", features = ["runtime-tokio-rustls"] }
async-graphql = { version = "5", features = ["default"] }
