[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["default"] }
uuid = { version = "1.1", features = ["serde"] }
chrono = "0.4"
strum = "0.25"
strum_macros = "0.25"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres"] }
async-graphql = { version = "5", features = ["default"] }