[package]
authors = ["Doma Sucic <domagoj.sucic1@gmail.com"]
edition = "2021"
name = "emissions-app-frontend"
version = "0.1.0"

[dependencies]
console_error_panic_hook = "0.1.6"
wasm-bindgen = "0.2.78"
wasm-bindgen-futures = "0.4.28"
wee_alloc = "0.4.5"

yew = "0.18.0"
yew-router = "0.15.0"

anyhow = "1.0.44"
graphql_client = "0.11.0"
serde = {version = "1.0.130", features = ["derive"]}
serde_json = "1.0.68"

lazy_static = "1.4.0"
toml = "0.5.8"
