[package]
name = "leptos-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.6.5", features = ["csr", "nightly"] }
graphql_client = "0.13"
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["serde"] }
common = { path = "../common" }
serde_json = "1"
gloo-net = "0.5"
web-sys = { vesrion = "0.3", features = ["Document", "HtmlDialogElement"] }
chrono = { version = "^0.4", features = ["wasmbind", "serde"] }
console_log = "1"
log = "0.4"