[package]
name = "methane_emissions_management_leptos_client"
version = "0.1.0"
edition = "2021"
authors = ["Doma Sucic <doma.nmlb@gmail.com>"]
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
name = "methane_emissions_management_leptos_client"
path = "src/main.rs"

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.6.6", features = ["csr", "nightly"] }
leptos_router = { version = "0.6.6", features = ["csr", "nightly"] }
graphql_client = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde"] }
common = { path = "../common" }
gloo-net = "0.5"
web-sys = { vesrion = "0.3", features = ["Document", "HtmlDialogElement"] }
chrono = { version = "^0.4", features = ["wasmbind", "serde"] }
console_log = "1"
log = "0.4"
thiserror = "1.0"
futures = "0.3"
strum = "0.26"
strum_macros = "0.26"