[package]
name = "methane_emissions_management_server"
version = "0.1.0"
edition = "2021"
authors = ["Doma Sucic <doma.nmlb@gmail.com>"]
license = "MIT/Apache-2.0"

[lib]
path = "src/lib.rs"

[[bin]]
name = "methane_emissions_management_server"
path = "src/main.rs"

[dependencies]
actix = "0.13"
actix-cors = "0.7"
actix-web = "4"
actix-web-lab = "0.20"

async-graphql = { version = "7.0.3", features = [
    "default",
    "dataloader",
    "time",
    "tracing",
    "uuid",
    "chrono",
] }
async-graphql-actix-web = "7.0.3"

env_logger = "0.11"
log = "0.4"

actix-web-flash-messages = { version = "0.4", features = ["cookies"] }
anyhow = "1"
config = "0.14"
itertools = "0.12"
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde-aux = "4"
sqlx = { version = "0.7", default-features = false, features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "chrono",
    "uuid",
    # "offline"
] }
tokio = { version = "1.36.0", features = ["rt-multi-thread"] }
tracing = "0.1"
uuid = { version = "1.1", features = ["serde", "v4"] }
anymap = "0.12.1"
argon2 = { version = "0.5", features = ["std"] }
thiserror = "1"
rand = { version = "0.8", features = ["std_rng"] }
serde_json = "1"
sha2 = "0.10"
hmac = { version = "0.12", features = ["std"] }
base64 = "0.22"
async-session = "3.0.0"
async-redis-session = "0.2.2"
futures-util = "0.3"
http = "1"
chrono = "0.4.22"
tiberius = { version = "0.12", features = ["chrono"] }
tokio-util = { version = "0.7.10", features = ["compat"] }
common = { path = "../common" }
# yew = { version = "0.20", features = ["ssr"] }
clap = { version = "4.1", features = ["derive"] }
# methane_emissions_management_client = { path = "../client", features = ["ssr"] }
actix-files = "0.6"
futures = { version = "0.3", features = ["std"], default-features = false }
strum = "0.26"
strum_macros = "0.26"
