[package]
authors = ["Doma Sucic <domagoj.sucic1@gmail.com"]
edition = "2021"
name = "users"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-cors = "0.6"
actix-web = "4.0.1"
actix-web-lab = "0.16.1"
argonautica = "0.2.0"
async-graphql = {version = "4.0.1", features = ["apollo_tracing"]}
async-graphql-actix-web = "4.0.1"
chrono = {version = "0.4", features = ["serde"]}
common-utils = {path = "../common-utils"}
diesel = {version = "1.4.8", features = ["postgres", "uuidv07", "r2d2", "chrono", "numeric"]}
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
env_logger = "0.9"
failure = "0.1.8"
jsonwebtoken = "8.0.1"
lazy_static = "1.4.0"
log = "0.4"
redis = {version = "0.21.5", features = ["tokio-comp", "connection-manager"]}
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
slab = "0.4.2"
strum = "0.24.0"
strum_macros = "0.24.0"
uuid = {version = "0.8.2", features = ["serde", "v4"]}# We need to use version 0.8.* because that's the version async-graphql uses
